--- a/02_css/03_my.css
+++ b/02_css/03_my.css
@@ -1,7 +1,8 @@
+/*
 <?php
     include ($_SERVER['DOCUMENT_ROOT'] . "/compress.php");
 ?>
-
+*/
 /* CSS/LESS by CXElegance.com */
 
 /* LESS variables */
