--- a/02_css/03_my.css
+++ b/02_css/03_my.css
@@ -38,43 +38,13 @@ a.linky {
 	background-color: @color_dirty_ink;
 	z-index: 2;
 }
-a.topdock_text {
+a.topdock_text, .detail_display .CXEpage_detail .close {
 	color: @color_my_white; /* .color_my_white */
 	padding: 4px 5px;
 	margin: 2px 1px;
 	display: inline-block;
 }
-#modal_screen {
-	position: fixed;
-	width: 100%;
-	height: 100%;
-	background-color: @color_my_white; /* .color_my_white */
-	filter: Alpha(opacity=90);
-	opacity: 0.9;
-	z-index: 20;
-}
-#popup {
-	position: fixed;
-	height: 100%;
-	z-index: 20;
-	max-width: 550px;
-}
-#popup_topdock {
-	width: 100%;
-	height: 50px;
-	background-color: @color_dirty_ink;
-}
-#popup_content_area {
-	background-color: @color_my_white;
-	border: 4px solid @color_creamsicle;
-	border-radius: 25px;
-}
-#popup_content {
-	padding: 0px 16px 16px 16px;
-	font-size: 2.0em; /* 20px */
-	overflow: hidden;
-	height: 80%; /* this value adjusted by javascript */
-}
+
 .page {
 	width: 100%;
 }
@@ -170,7 +140,7 @@ a.topdock_text {
 	width: 100%;
 	max-width: 1280px;
 }
-#topdock>div>.floatleft,#popup_topdock>.floatleft {
+#topdock>div>.floatleft,.detail_display .topdock>.floatleft {
 	font-size: 3.0em; /* 30 px */
 	letter-spacing: 0.04em;
 }
@@ -179,31 +149,24 @@ a.topdock_text {
 	letter-spacing: -0.1em;
 	line-height: 0.4em;
 }
-#popup_close,#popup_back,#popup_next,#popup_up,#popup_down {
+.detail_display .CXEpage_detail .close {
 	font-size: 5.0em; /* 50 px */
 	letter-spacing: -0.1em;
 	line-height: 0.4em;
 	padding: 4px 9px 19px 4px;
+	position: absolute;
+	right: 0;
+	.bordered;
 }
-#popup_up,#popup_down {
-	/* would like to get browser specific adjustments in here */
-	padding: 5px 17px 17px 11px;
-}
-#popup_up,#popup_down {
-	transform:rotate(90deg);
-	-ms-transform:rotate(90deg); /* IE 9 */
-	-moz-transform:rotate(90deg); /* Firefox */
-	-webkit-transform:rotate(90deg); /* Safari and Chrome */
-	-o-transform:rotate(90deg); /* Opera */
-}
-#popup_content_guide_text {
+.detail_display .CXEpage_detail .title {
 	width: 100%;
 	font-size: 2.5em; /* 25 px */
 	text-align: center;
 	filter: Alpha(opacity=20);
 	opacity: 0.2;
+	.font_yanone;
 }
-#popup_content_guide_hr {
+.detail_display .CXEpage_detail .hr {
 	margin-top: 4px;
 	margin-bottom: 16px;
 	display: block;
@@ -212,6 +175,29 @@ a.topdock_text {
 	height: 3px;
 	border: 1px solid @color_wispy_clouds;
 	border-radius: 2px;
+	.centered;
+}
+.detail_display {
+	margin: auto;
+	width: 50%;
+	min-width: 400px;
+}
+.detail_display .CXEpage_detail .topdock {
+	width: 100%;
+	height: 50px;
+	background-color: @color_dirty_ink;
+	position: relative;
+	.font_yanone;
+}
+.detail_display .inner {
+	background-color: @color_my_white;
+	border: 4px solid @color_creamsicle;
+	border-radius: 25px;
+}
+.detail_display .CXEpage_detail .content {
+	padding: 0px 16px 16px 16px;
+	font-size: 2.0em; /* 20px */
+	.bordered;
 }
 #topdock>div>.floatright>.topdock_text {
 	padding: 4px 13px 19px 10px;
