--- a/02_css/03_my.css
+++ b/02_css/03_my.css
@@ -179,6 +179,7 @@ a.topdock_text, .detail_display .CXEpage_detail .close {
 	margin: auto;
 	width: 50%;
 	min-width: 400px;
+	color: @color_birdymachine;
 }
 .detail_display .CXEpage_detail .topdock {
 	width: 100%;
@@ -437,7 +438,7 @@ a.linky[href="#cx"] {
 				width: auto;
 				min-width: 200px;
 				max-width: 355px;
-				img {
+				img, video {
 					max-width: 100%;
 					border-width: 2px;
 					border-style: solid;
@@ -486,7 +487,7 @@ a.linky[href="#cx"] {
 
 /* page 4 */
 
-#page4 {
+#page4, #page8 {
 	background-color: @color_creamsicle;
 	color: @color_birdymachine; 
 	background-image: url('../01_pics/10_page4_bg.png');
@@ -494,11 +495,11 @@ a.linky[href="#cx"] {
 		color: @color_wispy_clouds;
 	}
 }
-#page4 .row {
+#page4 .row, #page8 .row {
 	>div:nth-child(2) {
 		>div:nth-child(2) {
 			/* the image is in here */
-			img {
+			img, video {
 				border-color: @color_wispy_clouds;
 			}
 		}
@@ -533,7 +534,7 @@ a.linky[href="#cx"] {
 	>div:nth-child(2) {
 		>div:nth-child(2) {
 			/* the image is in here */
-			img {
+			img, video {
 				border-color: @color_wispy_clouds;
 			}
 		}
@@ -568,7 +569,7 @@ a.linky[href="#cx"] {
 	>div:nth-child(2) {
 		>div:nth-child(2) {
 			/* the image is in here */
-			img {
+			img, video {
 				border-color: @color_creamsicle;
 			}
 		}
@@ -603,7 +604,7 @@ a.linky[href="#cx"] {
 	>div:nth-child(2) {
 		>div:nth-child(2) {
 			/* the image is in here */
-			img {
+			img, video {
 				border-color: @color_creamsicle;
 			}
 		}
