--- a/02_css/03_my.css
+++ b/02_css/03_my.css
@@ -184,6 +184,9 @@ h5 {
 	padding: .7em 1em 0 1em;
 	background: rgba(255, 255, 255, 0.2);
 	font-family: @fontOswald;
+	>*{
+		margin-top: 0;
+	}
 }
 
 /* general layout positioning and typo tweeking */
